--- a/Dockerfile.armhf
+++ b/Dockerfile.armhf
@@ -19,6 +19,9 @@ RUN \
     python3 \
     python3-dev \
     python3-pip && \
+# fix focal
+  wget http://ftp.us.debian.org/debian/pool/main/libs/libseccomp/libseccomp2_2.4.4-1~bpo10+1_armhf.deb -O /tmp/libseccomp2.deb && \
+  dpkg -i /tmp/libseccomp2.deb && \
 # make directory
   mkdir ${SMA_PATH} && \
 # download repo
