--- a/Dockerfile.armhf
+++ b/Dockerfile.armhf
@@ -20,8 +20,10 @@ RUN \
     python3-dev \
     python3-pip && \
 # fix focal
-  wget http://ftp.us.debian.org/debian/pool/main/libs/libseccomp/libseccomp2_2.4.4-1~bpo10+1_armhf.deb -O /tmp/libseccomp2.deb && \
-  dpkg -i /tmp/libseccomp2.deb && \
+  apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 04EE7237B7D453EC 648ACFD622F3D138 && \
+  echo "deb http://deb.debian.org/debian buster-backports main" | tee -a /etc/apt/sources.list.d/buster-backports.list && \
+  apt update && \
+  apt install -t buster-backports libseccomp2 &&\
 # make directory
   mkdir ${SMA_PATH} && \
 # download repo
