--- a/Dockerfile.armhf
+++ b/Dockerfile.armhf
@@ -27,7 +27,8 @@ RUN \
   python3 -m pip install --user --upgrade pip && \
   python3 -m pip install --user virtualenv && \
   python3 -m virtualenv ${SMA_PATH}/venv && \
-  ${SMA_PATH}/venv/bin/pip install --no-use-pep517 -r ${SMA_PATH}/setup/requirements.txt && \
+  ${SMA_PATH}/venv/bin/pip install --upgrade setuptools wheel pep517 && \
+  ${SMA_PATH}/venv/bin/pip install -r ${SMA_PATH}/setup/requirements.txt && \
 # ffmpeg
   wget ${SMA_FFMPEG_URL} -O /tmp/ffmpeg.tar.xz && \
   tar -xJf /tmp/ffmpeg.tar.xz -C /usr/local/bin --strip-components 1 && \
