--- a/Dockerfile.armhf
+++ b/Dockerfile.armhf
@@ -5,6 +5,7 @@ ENV SMA_PATH /usr/local/sma
 ENV SMA_RS Radarr
 ENV SMA_UPDATE false
 ENV SMA_FFMPEG_URL https://johnvansickle.com/ffmpeg/releases/ffmpeg-release-armhf-static.tar.xz
+ENV CRYPTOGRAPHY_DONT_BUILD_RUST true
 
 # get python3 and git, and install python libraries
 RUN \
@@ -27,7 +28,6 @@ RUN \
   python3 -m pip install --user --upgrade pip && \
   python3 -m pip install --user virtualenv && \
   python3 -m virtualenv ${SMA_PATH}/venv && \
-  ${SMA_PATH}/venv/bin/pip install --upgrade setuptools wheel pep517 && \
   ${SMA_PATH}/venv/bin/pip install -r ${SMA_PATH}/setup/requirements.txt && \
 # ffmpeg
   wget ${SMA_FFMPEG_URL} -O /tmp/ffmpeg.tar.xz && \
