--- a/Dockerfile.armhf
+++ b/Dockerfile.armhf
@@ -5,7 +5,8 @@ ENV SMA_PATH /usr/local/sma
 ENV SMA_RS Radarr
 ENV SMA_UPDATE false
 ENV SMA_FFMPEG_URL https://johnvansickle.com/ffmpeg/releases/ffmpeg-release-armhf-static.tar.xz
-ENV PATH=$HOME/.cargo/bin:$PATH
+
+ENV PATH $HOME/.cargo/bin:$PATH
 
 # get python3 and git, and install python libraries
 RUN \
@@ -16,16 +17,14 @@ RUN \
     build-essential \
     libssl-dev \
     libffi-dev \
-    cargo \
     python3 \
-    python3-dev \
     python3-pip && \
+# install rust
+  curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y && \
 # make directory
   mkdir ${SMA_PATH} && \
 # download repo
   git clone https://github.com/mdhiggins/sickbeard_mp4_automator.git ${SMA_PATH} && \
-# install rust
-  curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y && \
 # install pip, venv, and set up a virtual self contained python environment
   python3 -m pip install --user --upgrade pip && \
   python3 -m pip install --user virtualenv && \
