--- a/Dockerfile.armhf
+++ b/Dockerfile.armhf
@@ -6,8 +6,6 @@ ENV SMA_RS Radarr
 ENV SMA_UPDATE false
 ENV SMA_FFMPEG_URL https://johnvansickle.com/ffmpeg/releases/ffmpeg-release-armhf-static.tar.xz
 
-ENV PATH $HOME/.cargo/bin:$PATH
-
 # get python3 and git, and install python libraries
 RUN \
   apt-get update && \
@@ -17,10 +15,10 @@ RUN \
     build-essential \
     libssl-dev \
     libffi-dev \
+    cargo \
     python3 \
+    python3-dev \
     python3-pip && \
-# install rust
-  curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y && \
 # make directory
   mkdir ${SMA_PATH} && \
 # download repo
@@ -29,6 +27,8 @@ RUN \
   python3 -m pip install --user --upgrade pip && \
   python3 -m pip install --user virtualenv && \
   python3 -m virtualenv ${SMA_PATH}/venv && \
+  ${SMA_PATH}/venv/bin/pip install --upgrade pip && \
+  ${SMA_PATH}/venv/bin/pip install install cryptography --no-binary cryptography && \
   ${SMA_PATH}/venv/bin/pip install -r ${SMA_PATH}/setup/requirements.txt && \
 # ffmpeg
   wget ${SMA_FFMPEG_URL} -O /tmp/ffmpeg.tar.xz && \
