--- a/Dockerfile.armhf
+++ b/Dockerfile.armhf
@@ -8,8 +8,6 @@ ENV SMA_FFMPEG_URL https://johnvansickle.com/ffmpeg/releases/ffmpeg-release-armh
 
 # get python3 and git, and install python libraries
 RUN \
-  mkdir ~/.cargo && \
-  mount -t tmpfs -o size=2048m tmpfs ~/.cargo && \
   apt-get update && \
   apt-get install -y \
     git \
@@ -17,10 +15,12 @@ RUN \
     build-essential \
     libssl-dev \
     libffi-dev \
-    cargo \
     python3 \
-    python3-dev \
     python3-pip && \
+# install rust
+  mkdir ~/.cargo && \
+  mount -t tmpfs -o size=2048m tmpfs ~/.cargo && \
+  curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y && \
 # make directory
   mkdir ${SMA_PATH} && \
 # download repo
