--- a/Dockerfile.armhf
+++ b/Dockerfile.armhf
@@ -15,12 +15,10 @@ RUN \
     build-essential \
     libssl-dev \
     libffi-dev \
+    cargo \
     python3 \
+    python3-dev \
     python3-pip && \
-# install rust
-  mkdir ~/.cargo && \
-  mount -t tmpfs -o size=2048m tmpfs ~/.cargo && \
-  curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y && \
 # make directory
   mkdir ${SMA_PATH} && \
 # download repo
