--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -41,12 +41,14 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
       -
-        name: Build and push
-        uses: docker/build-push-action@v2
+        name: Workaround
         run: |
           # workaround https://github.com/uraimo/run-on-arch-action/issues/9
           mkdir ~/.cargo
           mount -t tmpfs -o size=2048m tmpfs ~/.cargo
+      -
+        name: Build and push
+        uses: docker/build-push-action@v2
         with:
           context: .
           file: ./${{ matrix.dockerfile }}
