--- a/.github/workflows/docker-publish-nightly.yml
+++ b/.github/workflows/docker-publish-nightly.yml
@@ -27,6 +27,8 @@ jobs:
       -
         name: Checkout
         uses: actions/checkout@v2
+        with:
+          ref: ${{ env.tag }}
       -
         name: Set up QEMU
         uses: docker/setup-qemu-action@v1
