--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -43,6 +43,13 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
       -
+        name: Login to GitHub Container Registry
+        uses: docker/login-action@v1 
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ github.token }}
+      -
         name: Build and push
         uses: docker/build-push-action@v2
         with:
@@ -50,7 +57,9 @@ jobs:
           file: ./${{ matrix.dockerfile }}
           platforms: linux/${{ matrix.platform }}
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/${{ env.project }}:${{ env.tag }}-${{ matrix.platform }}
+          tags: |
+            ${{ secrets.DOCKER_USERNAME }}/${{ env.project }}:${{ env.tag }}-${{ matrix.platform }}
+            ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:${{ env.tag }}-${{ matrix.platform }}
 
   publish:
     runs-on: ubuntu-latest
@@ -65,6 +74,13 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
+      -
+        name: Login to GitHub Container Registry
+        uses: docker/login-action@v1 
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ github.token }}
       - 
         name: Create manifests for DockerHub
         env:
@@ -79,3 +95,4 @@ jobs:
         name: Push manifest to DockerHub
         run: |
           docker manifest push ${{ secrets.DOCKER_USERNAME }}/${{ env.project }}:${{ env.tag }}
+          docker manifest push ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:${{ env.tag }}
