--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -93,9 +93,9 @@ jobs:
           --amend ${{ secrets.DOCKER_USERNAME }}/${{ env.project }}:${{ env.tag }}-arm64
           docker manifest create \
           ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:${{ env.tag }} \
-          --amend ${{ secrets.DOCKER_USERNAME }}/${{ env.project }}:${{ env.tag }}-amd64 \
-          --amend ${{ secrets.DOCKER_USERNAME }}/${{ env.project }}:${{ env.tag }}-armhf \
-          --amend ${{ secrets.DOCKER_USERNAME }}/${{ env.project }}:${{ env.tag }}-arm64
+          --amend ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:${{ env.tag }}-amd64 \
+          --amend ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:${{ env.tag }}-armhf \
+          --amend ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:${{ env.tag }}-arm64
       -
         name: Push manifest to DockerHub
         run: |
