--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -3,12 +3,12 @@ name: Docker Publish
 on:
   push:
     branches:
-      - 'nightly'
+      - 'develop'
   schedule:
     - cron:  '0 5 * * *'
 
 env:
-  tag: nightly
+  tag: develop
   project: radarr-sma
 
 jobs:
