--- a/.github/workflows/docker-publish-develop.yml
+++ b/.github/workflows/docker-publish-develop.yml
@@ -56,8 +56,9 @@ jobs:
           file: ./${{ matrix.dockerfile }}
           platforms: linux/${{ matrix.platform }}
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/${{ env.project }}:${{ env.tag }}-${{ matrix.platform }}
-
+          tags: |
+            ${{ secrets.DOCKER_USERNAME }}/${{ env.project }}:${{ env.tag }}-${{ matrix.platform }}
+            ghcr.io/${{ github.repository }}:${{ env.tag }}-${{ matrix.platform }}
   publish:
     runs-on: ubuntu-latest
     needs: [docker]
@@ -89,12 +90,12 @@ jobs:
           --amend ${{ secrets.DOCKER_USERNAME }}/${{ env.project }}:${{ env.tag }}-armhf \
           --amend ${{ secrets.DOCKER_USERNAME }}/${{ env.project }}:${{ env.tag }}-arm64
           docker manifest create \
-          ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:${{ env.tag }} \
-          --amend ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:${{ env.tag }}-amd64 \
-          --amend ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:${{ env.tag }}-armhf \
-          --amend ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:${{ env.tag }}-arm64
+          ghcr.io/${{ github.repository }}:${{ env.tag }} \
+          --amend ghcr.io/${{ github.repository }}:${{ env.tag }}-amd64 \
+          --amend ghcr.io/${{ github.repository }}:${{ env.tag }}-armhf \
+          --amend ghcr.io/${{ github.repository }}:${{ env.tag }}-arm64
       -
         name: Push manifest to DockerHub
         run: |
           docker manifest push ${{ secrets.DOCKER_USERNAME }}/${{ env.project }}:${{ env.tag }}
-          docker manifest push ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:${{ env.tag }}
+          docker manifest push ghcr.io/${{ github.repository }}:${{ env.tag }}
